--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Топ Мониторинг 2018</title>
+	<title>Контакты | Топ Мониторинг 2018</title>
 	<link href="css/normalize.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="fonts/fonts.css" rel="stylesheet" type="text/css">
@@ -18,18 +18,18 @@
 			</div>
 
 			<div class="page-header__nav-wrapper">	
-				<div class="page-header__logo">
+				<a href="index.html" class="page-header__logo">
 					<img src="img/logo.png" alt="Логотип">
-				</div>
+				</a>
 
 				<nav class="main-nav">
 					<ul class="main-nav__list">
 						<!--   main-nav__item--active класс для активной страницы  -->
-						<li><a class="main-nav__item main-nav__item--active" href="#">Мониторинг</a></li> 
+						<li><a class="main-nav__item" href="#">Мониторинг</a></li>
 						<li><a class="main-nav__item" href="#">Обменники</a></li>
 						<li><a class="main-nav__item" href="#">Помощь</a></li>
 						<li><a class="main-nav__item" href="faq.html">FAQ</a></li>
-						<li><a class="main-nav__item" href="contacts.html">Контакты</a></li>
+						<li><a class="main-nav__item main-nav__item--active" href="contacts.html">Контакты</a></li>
 					</ul>
 					<div class="main-nav__user-block ">
 						<a class="main-nav__login" href="enter.html">Вход</a>
@@ -1060,7 +1060,7 @@
 		</div>
 
 
-		<div class="content"> <!-- Тут прописывается класс для страницы (контакты, faq и т.д) -->
+		<div class="content contacts""> <!-- Тут прописывается класс для страницы (контакты, faq и т.д) -->
 
 			<!-- 
 			В content__inner находится контент страницы в средней колонке
@@ -1069,264 +1069,35 @@
 
 			<div class="content__inner ">
 				<div class="content__text">
-					<h1>Выгодный курс обмена интернет-валют</h1>
-					<p>Бесплатный сервис мониторинга лучших курсов обмена электронных валют. Наша цель: быстро и качественно 
-						предоставить вам актуальную информацию для обмена Bitcoin, AdvCash, Perfect Money, Qiwi, Webmoney, и многих других валют.<br>
-						<a href="http://topmonitoring.ru/">TopMonitoring.ru</a> экономит самый ценный актив человека — время! Мы собрали более 150 обменных пунктов на одной площадке, 
-					что даёт вам возможность найти действительно самый выгодный для себя вариант. Быть информированным — означает иметь много денег©</p>
-					<span class="text--right">Приступайте к обмену. Удачи!</span>
-					<h2>Популярные курсы обмена</h2>
-				</div>
-				<!-- <div class="table-exchange-wrapper"> -->
-				<table class="table-exchange">
-					<tr>
-						<th>Обменник</th>
-						<th>Отдадите, BTC</th>
-						<th>Получите, ETH</th>
-						<th>Резерв</th>
-						<th>Отзывы</th>
-					</tr>
-					<tr>
-						<td><img src="img/logo/mmb.png" alt="Логотип обменника">MisterMoney<wbr>Brasil</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>7.76</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">8</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/io.png" alt="Логотип обменника">I-obmen</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>153.04</td>
-						<td><span class="table-exchange__number table-exchange__number--red">3</span>/<span class=" table-exchange__number table-exchange__number--green">10</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/xmlg.png" alt="Логотип обменника">Magnetic<wbr>Exchange</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>58.72</td>
-						<td><span class="table-exchange__number table-exchange__number--red">3</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/ac.png" alt="Логотип обменника">XMLGold</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>26.91</td>
-						<td><span class="table-exchange__number table-exchange__number--red">2</span>/<span class=" table-exchange__number table-exchange__number--green">18</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/b.png" alt="Логотип обменника">Arbitrcoin</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>15.00</td>
-						<td><span class="table-exchange__number table-exchange__number--red">2</span>/<span class=" table-exchange__number table-exchange__number--green">140</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/ob.png" alt="Логотип обменника">UltraChange</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>2.67</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">10</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/pc.png" alt="Логотип обменника">Обмен.сс</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>72.40</td>
-						<td><span class="table-exchange__number table-exchange__number--red">72</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/pm.png" alt="Логотип обменника">ProstoCash</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>3.42</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/armc.png" alt="Логотип обменника">Receive Money</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>0.00</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/xp.png" alt="Логотип обменника">Armchange</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>3.44</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">7</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/me.png" alt="Логотип обменника">X-Pay</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>495.85</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">1</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/p.png" alt="Логотип обменника">Exchanger</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>1248.57</td>
-						<td><span class="table-exchange__number table-exchange__number--red">13</span>/<span class="table-exchange__number table-exchange__number--green">5</span></td>
-					</tr>
-				</table>
-				<!-- 	</div> -->
+					<h1>Как с нами связаться</h1>
+					<p>Мы всегда рады ответить на интересующие вас вопросы и выслушать ваши предложения по улучшению сервиса TopMonitoring.ru. 
+					Также мы принимаем заявки на включение в листинг новых обменных пунктов.</p>
+					<p style="margin-bottom: 60px">Используйте следующий адрес для связи с нами:  <a href="#">info@topmonitoring.ru</a></p>
+
+					<h2>Форма обратной связи</h2>
+					<p>Используйте эту форму, если вы хотите задать нам вопрос, или сообщить о проблеме или ошибке. 
+					Пожалуйста, делайте ваше сообщение как можно более детализированным, это поможет нам решить проблему 
+					намного быстрее. Помните, если ваш e-mail адрес неправилен, мы не сможем вам ответить.</p>
 					
-				<div class="content__text content__text--grey">
-					<p>
-						Здесь собрана и упорядочена информация об автоматических и ручных обменниках электронных денег. 
-						Информация предостав- лена в виде таблиц и графиков, отображающих сведения по курсам и 
-						резервам обменных пунктов. В нашем мониторинге обменных пунктов данные об электронных обменных 
-						пунктах постоянно обновляются, с периодичностью в 5-8 секунд. Высокая скорость обновления позволяет 
-						гарантировать наличие самых свежих обменных курсов, что намного упрощает поиск надежного обменника с выгодным курсом.
-					</p>
-				</div>
-			</div>
-
-			<!-- 
-			В content__inner находится контент страницы в средней колонке
-			А в info-exchange находится контент который показывается 
-			когда в левом сайдбаре выбрана валютная пара -->
-
-			<div class="info-exchange">
-				<div class="content__text">
-					<h1>Обмен Perfect Money на Money Polo</h1>
-					<p>В таблице ниже отмечены все пункты обмена, которые обменивают Perfect Money на Money Polo по самым выгодным курсам обмена в Интернете. 
-					Обратите внимание на резервы валюты. Каждый обменник тща- тельно проверен администраторами нашего сервиса. </p>
-					<form class="info-exchange__form" action="#" method="GET">
-						<input class="info-exchange__input" id="info-exchange__in" type="number" placeholder="Отдать Сумму">
-						<input class="info-exchange__input" id="info-exchange__out" type="number" placeholder="Получить Сумму">
-						<button class="info-exchange__btn">Расчитать</button>
+					<form action="#" class="contact-form" method="GET">
+						<label  class="contact-form__label contact-form__label--name">
+							<input class="contact-form__name" name="name" type="text" placeholder="Ваше имя">
+						</label>
+						<label  class="contact-form__label contact-form__label--email">
+							<input class="contact-form__email" name="email" type="text" placeholder="Ваш E-mail">
+						</label>
+						<textarea class="contact-form__comment" name="comment" placeholder="Сообщение"></textarea>
+						<button class="contact-form__btn">Отправить</button>
 					</form>
 				</div>
-
-				<!-- <div class="table-exchange-wrapper"> -->
-				<table class="table-exchange">
-					<tr>
-						<th>Обменник</th>
-						<th>Отдадите, BTC</th>
-						<th>Получите, ETH</th>
-						<th>Резерв</th>
-						<th>Отзывы</th>
-					</tr>
-					<tr>
-						<td><img src="img/logo/mmb.png" alt="Логотип обменника">MisterMoney<wbr>Brasil</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>7.76</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">8</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/io.png" alt="Логотип обменника">I-obmen</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>153.04</td>
-						<td><span class="table-exchange__number table-exchange__number--red">3</span>/<span class=" table-exchange__number table-exchange__number--green">10</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/xmlg.png" alt="Логотип обменника">Magnetic<wbr>Exchange</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>58.72</td>
-						<td><span class="table-exchange__number table-exchange__number--red">3</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/ac.png" alt="Логотип обменника">XMLGold</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>26.91</td>
-						<td><span class="table-exchange__number table-exchange__number--red">2</span>/<span class=" table-exchange__number table-exchange__number--green">18</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/b.png" alt="Логотип обменника">Arbitrcoin</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>15.00</td>
-						<td><span class="table-exchange__number table-exchange__number--red">2</span>/<span class=" table-exchange__number table-exchange__number--green">140</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/ob.png" alt="Логотип обменника">UltraChange</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>2.67</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">10</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/pc.png" alt="Логотип обменника">Обмен.сс</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>72.40</td>
-						<td><span class="table-exchange__number table-exchange__number--red">72</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/pm.png" alt="Логотип обменника">ProstoCash</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>3.42</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/armc.png" alt="Логотип обменника">Receive Money</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>0.00</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">0</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/xp.png" alt="Логотип обменника">Armchange</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>3.44</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">7</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/me.png" alt="Логотип обменника">X-Pay</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>495.85</td>
-						<td><span class="table-exchange__number">0</span>/<span class=" table-exchange__number table-exchange__number--green">1</span></td>
-					</tr>
-					<tr>
-						<td><img src="img/logo/p.png" alt="Логотип обменника">Exchanger</td>
-						<td>1 <span class="table-exchange__grey-word">от 5</span></td>
-						<td>18,352</td>
-						<td>1248.57</td>
-						<td><span class="table-exchange__number table-exchange__number--red">13</span>/<span class="table-exchange__number table-exchange__number--green">5</span></td>
-					</tr>
-				</table>
-				<!-- 	</div> -->
-
-				<div class="content__text">
-					<p class="content__comment content__comment--red">
-						Всего по направлению Advanced Cash USD -> Сбербанк работает 35 надежных обменных пунктов. 
-						Суммарный резерв обменников: 97 399 150 RUB Сбербанк. Средневзвешенный курс обмена: 59.2842 
-					</p>
-					<p class="content__comment content__comment--grey">
-						Некоторые из представленных здесь обменников имеют дополнительные комиссии. Все комиссии уже учтены 
-						в курсах обмена с расчетом суммы обмена в 
-					</p>
-					<h2>Заголовок</h2>
-					<p>
-						В таблице вы можете увидеть ряд обменных пунктов, любой из которых совершает ручной или автоматический обмен 
-						Адвансед кэш доллары > карта Сбербанка России. Обратите внимание на метки, которые иногда установлены возле 
-						названий обменников в листинге. Для быстрого перехода на сайт обменного пункта нажмите один раз мышью на строку обменника. 
-						Если после перехода на вебсайт обменника вами не была обнаружена возможность обменять деньги, советуем сразу 
-						же обратиться к администратору сайта. Возможны разные сбои и неполадки системы, когда автоматический обмен Advanced Cash USD
-						на Сбербанк провести невозможно, но доступен обмен денег вручную. Если же выбранный вами обменник так и не обменял Adv Cash USD на 
-						Sber bank online, пожалуйста, поставьте нас в известность. Мы своевременно примем соответствующие меры:
-					</p>
-					<h2>Репутация обменников</h2>
-					<p>Вы можете полностью доверять любому из представленных здесь обменников. 
-					На сайте BestChange размещаются только работающие и надежные пункты обмена, прошедшие проверку нашим </p>
-				</div> 
 			</div>
 
 
 			<div class="content__footer">
 				<span>Добавить страницу:</span>
 				<a href="#">В закладки</a><a href="#">В соцсети</a><a href="#">На формум</a><a href="#">На сайт</a>
-			</div>                 
+			</div>  
+
 		</div>
 		
 
@@ -1549,19 +1320,20 @@
 		});
 
 
-		// var columnLeft = $('.sidebar__info-column--left');
-		// var columnRight = $('.sidebar__info-column--right');
+		var columnLeft = $('.sidebar__info-column--left');
+		var columnRight = $('.sidebar__info-column--right');
 
-		// var columnLinkLeft = columnLeft.find('.sidebar__list-item');
-		// var columnLinkRight = columnRight.find('.sidebar__list-item');
+		var columnLinkLeft = columnLeft.find('.sidebar__list-item');
+		var columnLinkRight = columnRight.find('.sidebar__list-item');
 
-		// columnLinkLeft.on('click', function() {
-		//   console.log('click on ' + ' column-left');
-		// })
-		// columnLinkRight.on('click', function() {
-		//   console.log('click on ' + ' column-right');
-		// })
+		columnLinkLeft.on('click', function() {
+		  console.log('click on ' + ' column-left');
+		})
+		columnLinkRight.on('click', function() {
+		  console.log('click on ' + ' column-right');
+		})
 
 	</script>
 </body>
 </html>
+			
